--- a/common.css
+++ b/common.css
@@ -109,7 +109,7 @@ body .form-controller .wrap-submit .error-term {
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
-  color: #bf1f9b;
+  color: #ffc107;
   padding-left: 16px;
 }
 
@@ -122,7 +122,7 @@ body .form-controller .wrap-submit .checkbox-round {
   vertical-align: middle;
   border: 1px solid #ddd;
   -moz-appearance: none;
-       appearance: none;
+  appearance: none;
   -webkit-appearance: none;
   outline: none;
   cursor: pointer;
@@ -157,3 +157,107 @@ body .footer .content {
   margin: auto;
 }
 /*# sourceMappingURL=common.css.map */
+.hidden {
+  /* visibility: hidden;
+  display: none; */
+  opacity: 0;
+}
+@media (min-width: 800px) and (max-width: 1500px) {
+  .wrap-input-controller {
+    margin: auto;
+    max-width: 800px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+}
+
+/* --------------------------------------- */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+
+:root {
+  --error-color: #dc3545;
+  --success-color: #28a745;
+  --warning-color: #ffc107;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  background-color: #fff;
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  width: 400px;
+}
+
+.form {
+  padding: 10px 20px;
+}
+
+.form h1 {
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-field {
+  margin-bottom: 5px;
+}
+
+.form-field label {
+  display: block;
+  color: #777;
+  margin-bottom: 5px;
+}
+
+.form-field input {
+  border: solid 2px #f0f0f0;
+  border-radius: 3px;
+  padding: 10px;
+  margin-bottom: 5px;
+  font-size: 14px;
+  display: block;
+  width: 100%;
+}
+
+.form-field input:focus {
+  outline: none;
+}
+
+.form-field.error input {
+  border-color: var(--error-color);
+}
+
+.form-field.success input {
+  border-color: var(--success-color);
+}
+
+.form-field small {
+  color: var(--error-color);
+}
+
+/* button */
+/* .btn {
+  width: 100%;
+  padding: 3%;
+  background: #007bff;
+  border-bottom: 2px solid #007bff;
+  border-top-style: none;
+  border-right-style: none;
+  border-left-style: none;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.btn:hover {
+  background: #0069d9;
+  cursor: pointer;
+}
+
+.btn:focus {
+  outline: none;
+} */
