--- a/resetpass.css
+++ b/resetpass.css
@@ -105,4 +105,6 @@ body .footer .content {
   color: #fcfcfd;
   margin-bottom: 30px;
   margin-left: 170px;
+  margin-top: -60px;
+  border: 2px solid #fcfdff;
 }
